@@ -1,5 +1,19 @@
 package com.unosquare.carmigo.controller;
 
+import static com.unosquare.carmigo.util.Constants.ACTIVE_USER;
+import static com.unosquare.carmigo.util.Constants.ACTIVE_USER_ID;
+import static com.unosquare.carmigo.util.Constants.ADMIN_USER;
+import static com.unosquare.carmigo.util.Constants.ADMIN_USER_ID;
+import static com.unosquare.carmigo.util.Constants.LOCKED_OUT_USER;
+import static com.unosquare.carmigo.util.Constants.LOCKED_OUT_USER_ID;
+import static com.unosquare.carmigo.util.Constants.PATCH_PLATFORM_USER_INVALID_JSON;
+import static com.unosquare.carmigo.util.Constants.PATCH_PLATFORM_USER_VALID_JSON;
+import static com.unosquare.carmigo.util.Constants.POST_PLATFORM_USER_INVALID_JSON;
+import static com.unosquare.carmigo.util.Constants.POST_PLATFORM_USER_VALID_JSON;
+import static com.unosquare.carmigo.util.Constants.STAGED_USER;
+import static com.unosquare.carmigo.util.Constants.STAGED_USER_ID;
+import static com.unosquare.carmigo.util.Constants.SUSPENDED_USER;
+import static com.unosquare.carmigo.util.Constants.SUSPENDED_USER_ID;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 import com.unosquare.carmigo.entity.Driver;
@@ -10,7 +24,6 @@ import com.unosquare.carmigo.repository.DriverRepository;
 import com.unosquare.carmigo.repository.PassengerRepository;
 import com.unosquare.carmigo.repository.PlatformUserRepository;
 import com.unosquare.carmigo.util.ControllerUtility;
-import com.unosquare.carmigo.util.ResourceUtility;
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.EntityNotFoundException;
 import java.time.Instant;
@@ -32,24 +45,6 @@ import org.springframework.test.web.servlet.ResultMatcher;
 public class PlatformUserControllerIT {
 
   private static final String API_LEADING = "/v1/users";
-  private static final String POST_PLATFORM_USER_VALID_JSON =
-      ResourceUtility.generateStringFromResource("jsonAssets/PostPlatformUserValid.json");
-  private static final String POST_PLATFORM_USER_INVALID_JSON =
-      ResourceUtility.generateStringFromResource("jsonAssets/PostPlatformUserInvalid.json");
-  private static final String PATCH_PLATFORM_USER_VALID_JSON =
-      ResourceUtility.generateStringFromResource("jsonAssets/PatchPlatformUserValid.json");
-  private static final String PATCH_PLATFORM_USER_INVALID_JSON =
-      ResourceUtility.generateStringFromResource("jsonAssets/PatchPlatformUserInvalid.json");
-  private static final String STAGED_USER = "staged@example.com";
-  private static int STAGED_USER_ID = 1;
-  private static final String ACTIVE_USER = "active@example.com";
-  private static int ACTIVE_USER_ID = 2;
-  private static final String SUSPENDED_USER = "suspended@example.com";
-  private static int SUSPENDED_USER_ID = 3;
-  private static final String LOCKED_OUT_USER = "locked_out@example.com";
-  private static int LOCKED_OUT_USER_ID = 4;
-  private static final String ADMIN_USER = "admin@example.com";
-  private static int ADMIN_USER_ID = 5;
 
   @Autowired private MockMvc mockMvc;
   @Autowired private PlatformUserRepository platformUserRepository;
@@ -188,38 +183,37 @@ public class PlatformUserControllerIT {
   private void recreateEntities(final String email) {
     final PlatformUser platformUser;
     switch (email) {
-      case "staged@example.com":
+      case "staged@example.com" -> {
         platformUser = recreatePlatformUser(1, email);
         recreateDriver(platformUser);
         recreatePassenger(platformUser);
         STAGED_USER_ID = platformUser.getId();
-        break;
-      case "active@example.com":
+      }
+      case "active@example.com" -> {
         platformUser = recreatePlatformUser(2, email);
         recreateDriver(platformUser);
         recreatePassenger(platformUser);
         ACTIVE_USER_ID = platformUser.getId();
-        break;
-      case "suspended@example.com":
+      }
+      case "suspended@example.com" -> {
         platformUser = recreatePlatformUser(3, email);
         recreateDriver(platformUser);
         recreatePassenger(platformUser);
         SUSPENDED_USER_ID = platformUser.getId();
-        break;
-      case "locked_out@example.com":
+      }
+      case "locked_out@example.com" -> {
         platformUser = recreatePlatformUser(4, email);
         recreateDriver(platformUser);
         recreatePassenger(platformUser);
         LOCKED_OUT_USER_ID = platformUser.getId();
-        break;
-      case "admin@example.com":
+      }
+      case "admin@example.com" -> {
         platformUser = recreatePlatformUser(5, email);
         recreateDriver(platformUser);
         recreatePassenger(platformUser);
         ADMIN_USER_ID = platformUser.getId();
-        break;
-      default:
-        throw new EntityNotFoundException(String.format("Not possible to create entity for %s", email));
+      }
+      default -> throw new EntityNotFoundException("Not possible to create entity for %s".formatted(email));
     }
   }
 
